--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,12 @@
 name: Deploy Forecast Pipeline
 
 on:
+  push:
+    branches: [ main ]
   schedule:
-    # every day at midnight UTC; tweak as needed
     - cron: '0 0 * * *'
   workflow_dispatch:
+
 
 jobs:
   run-pipeline:
