--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,9 @@
 name: Deploy Forecast Pipeline
 
 on:
-  push:
-    branches: [ main ]
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
-
 
 jobs:
   run-pipeline:
@@ -16,24 +13,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Use Node.js 16
         uses: actions/setup-node@v3
         with:
           node-version: '16'
 
       - name: Install dependencies
-        run: |
-          cd functions
-          npm ci
+        working-directory: functions
+        run: npm ci
 
       - name: Run Forecast Pipeline
-        run: node functions/pipeline.js
+        working-directory: functions
+        run: node pipeline.js
 
-      # If you need to write back to Firestore or deploy:
-      - name: Deploy results to Firestore
+      - name: Deploy to Firestore
+        working-directory: functions
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          cd functions
           npm install -g firebase-tools
           firebase deploy --only firestore --token "$FIREBASE_TOKEN"
