--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,11 @@ jobs:
         working-directory: functions
         run: npm ci
 
+      - name: Authenticate to Firestore
+        run: |
+          echo "${{ secrets.GCP_SA_KEY }}" > $HOME/gcloud-key.json
+          export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json
+
       - name: Run Forecast Pipeline
         working-directory: functions
         run: node pipeline.js
-
-      - name: Deploy to Firestore
-        working-directory: functions
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: |
-          npm install -g firebase-tools
-          firebase deploy --only firestore --token "$FIREBASE_TOKEN"
