--- a/functions/package.json
+++ b/functions/package.json
@@ -10,11 +10,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": ">=18 <=20"
   },
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
+    "axios": "^1.4.0",
     "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
