--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,17 @@
 name: Deploy Forecast Pipeline
 
 on:
-  # Run every day at midnight UTC
+  # every day at midnight UTC
   schedule:
     - cron: '0 0 * * *'
-  # Also allow manual triggers
+  # allow manual triggers
   workflow_dispatch:
 
 jobs:
   run-pipeline:
     runs-on: ubuntu-latest
     env:
-      # This secret must contain the full JSON of your service account key
+      # this secret should be the Base64-encoded service account JSON
       FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
 
     steps:
@@ -19,9 +19,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Write service account key
+        # decode the Base64 secret back into JSON
         run: |
           mkdir -p functions
-          echo "${{ env.FIREBASE_SERVICE_ACCOUNT }}" > functions/serviceAccountKey.json
+          echo "${FIREBASE_SERVICE_ACCOUNT}" \
+            | base64 --decode > functions/serviceAccountKey.json
 
       - name: Use Node.js 20
         uses: actions/setup-node@v3
