--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,29 @@
 name: Deploy Forecast Pipeline
 
 on:
-  # every day at midnight UTC
+  # Run every day at midnight UTC
   schedule:
     - cron: '0 0 * * *'
-  # allow manual triggers
+  # Also allow manual triggers
   workflow_dispatch:
 
 jobs:
   run-pipeline:
     runs-on: ubuntu-latest
     env:
-      # this secret should be the Base64-encoded service account JSON
-      FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+      # no need to re-export this, we’ll pull it directly from secrets:
+      # FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Write service account key
-        # decode the Base64 secret back into JSON
         run: |
           mkdir -p functions
-          echo "${FIREBASE_SERVICE_ACCOUNT}" \
-            | base64 --decode > functions/serviceAccountKey.json
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" \
+            | base64 --decode \
+            > functions/serviceAccountKey.json
 
       - name: Use Node.js 20
         uses: actions/setup-node@v3
