--- a/functions/package.json
+++ b/functions/package.json
@@ -1,22 +1,25 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.mjs",
   "scripts": {
     "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
-    "start": "npm run shell",
+    "start": "node index.mjs",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
     "node": ">=18 <=20"
   },
-  "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "axios": "^1.4.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "node-fetch": "^3.3.2",
+    "geotiff": "^2.1.3",
+    "luxon": "^3.6.1"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
