--- a/.github/workflows/daily-pipeline.yml
+++ b/.github/workflows/daily-pipeline.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Decode Service Account
         run: |
           mkdir -p functions
-          echo "${{ env.FIREBASE_SERVICE_ACCOUNT }}" > functions/serviceAccountKey.json
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > functions/serviceAccountKey.json
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
